word breaks prevented during collapse tree-view

--- a/Flask/app/static/js/common/treejs/treejs.css
+++ b/Flask/app/static/js/common/treejs/treejs.css
@@ -1,6 +1,7 @@
 .tj_container *{
 	position: relative;
 	box-sizing: border-box;
+    white-space: nowrap;
 }
 
 .tj_container ul{
